<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".EditarPostActivity">


    <LinearLayout
        android:layout_marginTop="50dp"
        android:orientation="vertical"
        android:gravity="center"
        android:id="@+id/linearLayout2"
        android:layout_width="6000dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="141dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">


        <TextView
            android:id="@+id/textView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="start"
            android:textSize="20sp"
            android:layout_weight="1"
            android:text="@string/tituloPost" />

        <EditText
            android:id="@+id/txtTit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:inputType="text"
            android:text="" />

        <TextView
            android:layout_marginTop="30dp"
            android:id="@+id/textView6"
            android:textSize="20sp"
            android:gravity="start"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/descripcionPost" />

        <EditText
            android:id="@+id/txtDesc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:lines="3"
            android:ems="10"
            android:inputType="textMultiLine"
            android:text="" />

        <TextView
            android:layout_marginTop="30dp"
            android:id="@+id/textView7"
            android:textSize="20sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/categoriaPost" />


        <Spinner
            android:layout_marginTop="15dp"
            android:id="@+id/spinner"
            android:tag="Categoría"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:entries="@array/spinner_categorias"
            android:prompt="@string/spinner_prompt"
            android:layout_weight="1" />

        <Button

            android:id="@+id/acceptButton"
            style="?android:textAppearanceSmall"
            android:background="@drawable/custom_button"
            android:layout_gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="70dp"
            android:text="@string/action_actualizar_post"
            android:textColor="@color/colorPrimary"
            android:textStyle="bold" />
    </LinearLayout>


</android.support.constraint.ConstraintLayout>