<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegisterActivity">

    <Button
        android:id="@+id/registrar_boton"
        style="?android:textAppearanceSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginStart="144dp"
        android:layout_marginTop="466dp"
        android:layout_marginEnd="145dp"
        android:layout_marginBottom="218dp"
        android:background="@drawable/custom_button"
        android:text="@string/btn_aceptar"
        android:textColor="@color/colorPrimary"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <AutoCompleteTextView
        android:id="@+id/registro_contraseña"
        android:layout_width="359dp"
        android:layout_height="40dp"
        android:layout_marginStart="26dp"
        android:layout_marginTop="346dp"
        android:layout_marginEnd="26dp"
        android:layout_marginBottom="347dp"
        android:hint="@string/prompt_password"
        android:inputType="textPassword"
        android:maxLines="1"
        android:singleLine="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <AutoCompleteTextView
        android:id="@+id/registro_correo"
        android:layout_width="359dp"
        android:layout_height="40dp"
        android:layout_marginStart="26dp"
        android:layout_marginTop="256dp"
        android:layout_marginEnd="26dp"
        android:layout_marginBottom="437dp"
        android:hint="@string/prompt_email"
        android:inputType="text"
        android:maxLines="1"
        android:singleLine="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <AutoCompleteTextView
        android:id="@+id/registro_usuario"
        android:layout_width="359dp"
        android:layout_height="40dp"
        android:layout_marginStart="26dp"
        android:layout_marginTop="169dp"
        android:layout_marginEnd="26dp"
        android:layout_marginBottom="524dp"
        android:hint="@string/prompt_usuario"
        android:inputType="text"
        android:maxLines="1"
        android:singleLine="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</android.support.constraint.ConstraintLayout>